--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = 'https://example.org/'
 languageCode = 'fr-fr'
-title = 'Mon Blog'
+title = 'DevLog'
 theme = 'myblogtheme'
 enableGitInfo = true
