--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,31 @@
 baseURL = 'https://example.org/'
-languageCode = 'fr-fr'
-title = 'DevLog'
-theme = 'myblogtheme'
+languageCode = 'fr-FR'
+title = 'My New Hugo Site'
+theme = "myblogtheme"
 enableGitInfo = true
+
+[markup.goldmark.renderer]
+unsafe = true
+
+[menus]
+  [[menus.main]]
+    name = 'Accueil'
+    pageRef = '/'
+    weight = 10
+  [[menus.main]]
+    name = 'DevLog'
+    pageRef = '/posts'
+    weight = 20
+  [[menus.main]]
+    name = 'A propos'
+    pageRef = '/a-propos'
+    weight = 30
+  [[menus.main]]
+    name = 'Mon CV'
+    pageRef = '/mon-cv'
+    weight = 40
+
+[module]
+  [module.hugoVersion]
+    extended = false
+    min = '0.150.0'
