Refine i3 article and update README

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,7 @@ languageCode = 'fr-FR'
 title = 'My New Hugo Site'
 theme = "myblogtheme"
 enableGitInfo = true
+enableRobotsTXT = true
 
 [markup.goldmark.renderer]
 unsafe = true
